--- a/backend/views/resultpsico.erb
+++ b/backend/views/resultpsico.erb
@@ -1,11 +1,1 @@
-[
-<% @psicologos.each do |psicologo| %>
-    {
-        "id": "<%= psicologo[:id] %>",
-        "cedula": "<%= psicologo[:cedula] %>",
-        "nombreCompleto": "<%= psicologo[:nombreCompleto] %>",
-        "email": "<%= psicologo[:email] %>",
-        "clave": "<%= psicologo[:clave] %>"
-    },
-<% end %>
-]
+<%=@psicologos.to_json%>
