--- a/backend/views/resultpatenciones.erb
+++ b/backend/views/resultpatenciones.erb
@@ -1,10 +1,1 @@
-[
-    <% @patenciones.each do |patencion| %>
-    {
-        "id del paciente": "<%= patencion[:idPaciente] %>",
-        "nombre del psicologo": "<%= patencion[:nombreCompleto] %>",
-        "Observaciones": "<%= patencion[:observaciones] %>",
-        "fecha": "<%= patencion[:fecha] %>"
-    },
-    <% end %>
-]
+<%=@patenciones.to_json%>
